--- a/templates/default/css/core.css
+++ b/templates/default/css/core.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('body.css');       /* global body styling                  */
 @import url('notebox.css');    /* pull in warning/important box styles */
 @import url('shadowbox.css');  /* and support for shadowed divs        */
 @import url('messagebox.css'); /* support for message boxes            */
@@ -158,4 +159,30 @@
     display: block;
     width: 1px;
     height: 36px;
+}
+
+label {
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.overTxtLabel {
+    color: #aaa;
+}
+
+hr {
+    border: none;
+    border-bottom: 1px solid #DDDDDD;
+    clear: both;
+    height: 0px;
+    margin: 15px 0px;
+    overflow: hidden;
+}
+
+input.fillwide {
+    width: 100%;
+}
+
+.submitbox {
+    text-align: right;
 }
