--- a/templates/default/css/error.css
+++ b/templates/default/css/error.css
@@ -1,40 +1,10 @@
 @charset "utf-8";
+@import url('body.css');       /* global body styling                  */
 @import url('notebox.css');    /* pull in warning/important box styles */
 @import url('shadowbox.css');  /* and support for shadowed divs        */
 @import url('messagebox.css'); /* support for message boxes            */
 @import url('button.css');     /* button rules (okay?)                 */
 @import url('userbar.css');    /* Userbar styling.                     */
-
-body  {
-    font: 100% Verdana, Arial, Helvetica, sans-serif;
-    color: #000;
-    font-size: 13px;
-    min-width: 900px;
-    background-color: #eee;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-body, h1, h2, h3, h4, h5 {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: #0645ad;
-    background: none;
-}
-a:visited {
-    color: #0b0080;
-}
-a:active {
-    color: #faa700;
-}
-a:hover, a:focus {
-    text-decoration: underline;
-}
 
 #errorcore {
     margin: 0px auto;
