--- a/templates/default/css/messagebox.css
+++ b/templates/default/css/messagebox.css
@@ -30,3 +30,17 @@
     border-top: 1px solid #ddd;
     text-align: right;
 }
+
+.messagecore {
+    margin: 100px auto !important;
+    width: 440px;
+}
+
+.messagecore h1#logo a {
+    display: block;
+    width: 141px;
+    height: 78px;
+    background: url('../images/page_layout/logo.png') 50% top no-repeat;
+    padding-bottom: 10px;
+    margin: 0px auto;
+}
