--- a/templates/default/css/login.css
+++ b/templates/default/css/login.css
@@ -13,9 +13,9 @@
 
 #logincore h1#logo a {
     display: block;
-    width: 141px;
-    height: 78px;
-    background: url('../images/page_layout/logo.png') 50% top no-repeat;
+    width: 150px;
+    height: 124px;
+    background: url('../images/logo.png') 50% top no-repeat;
     padding-bottom: 10px;
     margin: 0px auto;
 }
