--- a/templates/default/css/core.css
+++ b/templates/default/css/core.css
@@ -223,15 +223,92 @@ li.tab.active {
     border: 1px #aaa solid;
 }
 
-ul.paginate {
+div.paginate {
     float: right;
-    font-size: smaller;
+    margin: 1em auto;
 }
 
-li.pagebox {
+div.paginate div.location {
+    display: inline-block;
+}
+
+ul.paginate {
+    display: inline-block;
+    margin: 0px;
+    padding: 0px;
+}
+
+ul.paginate li {
     display: inline;
     list-style: none;
-    padding: 4px 2px 2px 2px;
+}
+
+ul.paginate li.pagebox {
+	color: #d9eef7;
+	border: solid 1px #0076a3;
+	margin: 0 0;
+	outline: none;
+	cursor: pointer;
+	text-align: center;
+	text-decoration: none;
+	font: 14px/100% Arial, Helvetica, sans-serif;
+    font-weight: bold;
+	padding: .3em 1em .3em;
+	text-shadow: 0 1px 1px rgba(0,0,0,.3);
+	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
+	box-shadow: 0 1px 2px rgba(0,0,0,.2);
+
+    background-color: #0095cd; /* Fallback */
+    background-image: -ms-linear-gradient(top, #00adee, #0078a5); /* IE10 */
+    background-image: -moz-linear-gradient(top, #00adee, #0078a5); /* Firefox */
+    background-image: -o-linear-gradient(top, #00adee, #0078a5); /* Opera */
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5)); /* old Webkit */
+    background-image: -webkit-linear-gradient(top, #00adee, #0078a5); /* new Webkit */
+    background-image: linear-gradient(top, #00adee, #0078a5); /* proposed W3C Markup */
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
+}
+
+ul.paginate li.pagebox:hover {
+    background-color: #007ead; /* Fallback */
+    background-image: -ms-linear-gradient(top, #0095cc, #00678e); /* IE10 */
+    background-image: -moz-linear-gradient(top, #0095cc, #00678e); /* Firefox */
+    background-image: -o-linear-gradient(top, #0095cc, #00678e); /* Opera */
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e)); /* old Webkit */
+    background-image: -webkit-linear-gradient(top, #0095cc, #00678e); /* new Webkit */
+    background-image: linear-gradient(top, #0095cc, #00678e); /* proposed W3C Markup */
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0095cc', endColorstr='#00678e');
+}
+
+ul.paginate li.pagebox.disabled, ul.paginate li.pagebox.disabled:hover {
+    color: #888;
+    border: solid 1px #a3a3a3;
+	cursor: auto;
+
+    background-color: #cdcdcd; /* Fallback */
+    background-image: -ms-linear-gradient(top, #eeeeee, #a5a5a5); /* IE10 */
+    background-image: -moz-linear-gradient(top, #eeeeee, #a5a5a5); /* Firefox */
+    background-image: -o-linear-gradient(top, #eeeeee, #a5a5a5); /* Opera */
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#eeeeee), to(#a5a5a5)); /* old Webkit */
+    background-image: -webkit-linear-gradient(top, #eeeeee, #a5a5a5); /* new Webkit */
+    background-image: linear-gradient(top, #eeeeee, #a5a5a5); /* proposed W3C Markup */
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#a5a5a5');
+}
+
+ul.paginate li.pagebox a {
+	color: #d9eef7;
+	text-decoration: none;
+}
+
+
+ul.paginate li.pagebox:first-child {
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
+}
+
+ul.paginate li.pagebox:last-child {
+    border-bottom-right-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 li.pagebox.active {
