--- a/templates/default/css/core.css
+++ b/templates/default/css/core.css
@@ -204,6 +204,7 @@ ul.tabs {
     border-bottom: 1px solid #aaa;
     margin-bottom: 0px;
     padding: 0px 0px 2px;
+    margin-top: 1em;
 }
 
 li.tab {
