--- a/templates/default/css/compose.css
+++ b/templates/default/css/compose.css
@@ -162,3 +162,10 @@ div.recip-meths {
 div.recipient {
     float: left;
 }
+
+div.content h3 {
+    font-size: 13px;
+    font-weight: bold;
+    border-bottom: 1px dotted #666;
+    margin: 5px 0px 2px 0px;
+}
