--- a/templates/default/css/articlelist.css
+++ b/templates/default/css/articlelist.css
@@ -70,6 +70,12 @@ table.listtable tr td.date.timed {
     color: #777;
 }
 
+table.listtable tr td.feed ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
 table.listtable tr td.controls {
     width: 100px;
     padding: 0px;
