--- a/templates/default/css/core.css
+++ b/templates/default/css/core.css
@@ -1,11 +1,12 @@
 @charset "utf-8";
-@import url('body.css');       /* global body styling                  */
-@import url('notebox.css');    /* pull in warning/important box styles */
-@import url('shadowbox.css');  /* and support for shadowed divs        */
-@import url('messagebox.css'); /* support for message boxes            */
-@import url('button.css');     /* button rules (okay?)                 */
-@import url('inputglow.css');  /* make input boxes glow when active    */
-@import url('controls.css');   /* sprite-based control buttons         */
+@import url('body.css');        /* global body styling                  */
+@import url('notebox.css');     /* pull in warning/important box styles */
+@import url('shadowbox.css');   /* and support for shadowed divs        */
+@import url('messagebox.css');  /* support for message boxes            */
+@import url('button.css');      /* button rules (okay?)                 */
+@import url('inputglow.css');   /* make input boxes glow when active    */
+@import url('controls.css');    /* sprite-based control buttons         */
+@import url('inputstyles.css'); /* general input styling                */
 
 .newsagent #topbar {
     position: absolute;
