Colour tweak for better appearance.

--- a/templates/default/css/compose.css
+++ b/templates/default/css/compose.css
@@ -168,7 +168,7 @@ div.entry label input {
 }
 
 div.autosavebox {
-    border: 1px grey inset;
+    border: 1px #CCC inset;
     padding: 2px;
     font-size: 9px;
 }
