--- a/templates/default/css/tellus.css
+++ b/templates/default/css/tellus.css
@@ -18,20 +18,32 @@
 }
 
 #messagebrowser {
-    width: 930px;
-    float: left;
+    width: 910px;
+    margin-left: 200px;
+}
+
+table.listtable {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table.listtable tr td {
+    border-bottom: 1px solid #ddd;
+    padding: 7px 3px;
+    vertical-align: middle;
+    white-space: nowrap;
 }
 
 table.listtable tr:last-child td {
     border-bottom: none;
 }
 
-table.listtable tr td.mode {
+table.listtable tr td.type {
     width: 22px;
 }
 
-table.listtable tr td.mode div {
-    background-image: url('../images/mode_sprites.png');
+table.listtable tr td.type div {
+    background-image: url('../images/tellus/type_sprites.png');
     background-repeat: no-repeat;
     background-position: 0px 0px;
     width: 16px;
@@ -39,10 +51,20 @@ table.listtable tr td.mode div {
     display: inline-block;
 }
 
-table.listtable tr td.feed ul {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
+table.listtable tr td.type div.news {
+    background-position: 0px 0px;
+}
+
+table.listtable tr td.type div.event {
+    background-position: -16px 0px;
+}
+
+table.listtable tr td.type div.seminar {
+    background-position: -32px 0px;
+}
+
+table.listtable tr td.type div.other {
+    background-position: -48px 0px;
 }
 
 table.listtable tr td.controls {
@@ -57,6 +79,67 @@ table.listtable tr td.controls ul.controls {
 
 table.listtable tr:hover td.controls ul.controls {
     display: inline-block;
+}
+
+.control {
+    background-image: url('../images/tellus/control_sprites.png');
+}
+
+.control.requeue {
+    background-position: 0px 0px;
+}
+
+.control.requeue:hover {
+    background-position: 0px -32px;
+}
+
+.control.requeue.ctrldisabled {
+    background-position: 0px -16px;
+}
+
+.control.promote {
+    background-position: -16px 0px;
+}
+
+.control.promote:hover {
+    background-position: -16px -32px;
+}
+
+.control.promote.ctrldisabled {
+    background-position: -16px -16px;
+}
+
+.control.reject {
+    background-position: -32px 0px;
+}
+
+.control.reject:hover {
+    background-position: -32px -32px;
+}
+
+.control.reject.ctrldisabled {
+    background-position: -32px -16px;
+}
+
+.control.delete {
+    background-position: -48px 0px;
+}
+
+.control.delete:hover {
+    background-position: -48px -32px;
+}
+
+.control.delete.ctrldisabled {
+    background-position: -48px -16px;
+}
+
+
+table.listtable tr:hover {
+    background-color: #eee;
+}
+
+table.listtable td.summary {
+    cursor: pointer;
 }
 
 table.listtable td.summary div.summary {
@@ -75,4 +158,35 @@ table.listtable td.summary ul.info li {
     padding: 0px;
     list-style-type: none;
     display: inline;
+}
+
+
+div.queue {
+    padding-left: 14px;
+}
+
+div.queue.active {
+    padding-left: 10px;
+    border-left: 4px solid #dd4b39;
+}
+
+div.queue .queuebox {
+    padding: 6px 0px;
+    cursor: pointer;
+}
+
+div.queue .queuebox:hover {
+    background: #eee;
+}
+
+div.queue .queuebox .queuetitle {
+    padding-left: 6px;
+}
+
+div.queue.active .queuebox .queuetitle {
+    color: #dd4439;
+}
+
+div.queue.hasnew .queuebox .queuetitle {
+    font-weight: bold;
 }
