--- a/templates/default/css/messagecontrol.css
+++ b/templates/default/css/messagecontrol.css
@@ -2,6 +2,9 @@ ul.msgctrl {
     display: inline-block;
     padding: 0px;
     margin: 0px;
+    margin-left: 3em;
+    opacity: 0;
+    visibility: hidden;
 }
 
 ul.msgctrl li {
