Messages removed from list after move.

--- a/templates/default/css/tellus.css
+++ b/templates/default/css/tellus.css
@@ -193,3 +193,7 @@ div.queue.active .queuebox .queuetitle {
 div.queue.hasnew .queuebox .queuetitle {
     font-weight: bold;
 }
+
+div#controls-box {
+    margin-left: 8em;
+}
